--- a/public/contact.html
+++ b/public/contact.html
@@ -127,6 +127,8 @@
 <script src="https://kit.fontawesome.com/2e853aa989.js" crossorigin="anonymous"></script>
 <script src="./main.3f6952e4.css"></script>
 <script src="./app.js"></script>
+<script type="text/javascript" src="./main.70a66962.js"></script></body>
+
 <script src="../servesmail.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
