--- a/public/Gp/Gp/index.html
+++ b/public/Gp/Gp/index.html
@@ -40,10 +40,10 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="/public/index.html">01: Home</a></li>
-          <li><a class="nav-link scrollto" href="/public/works.html">02: Projects</a></li>
-          <li><a class="nav-link scrollto" href="/public/about.html">03 :About</a></li>
-          <li><a class="nav-link scrollto " href="/public/contact.html">04: Contact</a></li>
+          <li><a class="nav-link scrollto active" href="../../index.html">01: Home</a></li>
+          <li><a class="nav-link scrollto" href="../../works.html">02: Projects</a></li>
+          <li><a class="nav-link scrollto" href="../../about.html">03 :About</a></li>
+          <li><a class="nav-link scrollto " href="../../contact.html">04: Contact</a></li>
          </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -148,6 +148,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script type="text/javascript" src="/public/main.70a66962.js"></script></body>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
