--- a/public/about.html
+++ b/public/about.html
@@ -57,7 +57,7 @@
           <div class="section-container-spacer text-center">
             <h1 class="h2">03 : About me</h1>
           </div>
-          <p style="font-weight: bold;">P.S:This section holds my education qualifications and a bit insights about my coding fascination</p>
+          <p style="font-weight: bold;">NOTE:This section holds my education qualifications and a bit insights about my coding fascination</p>
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
